# coding: utf-8
[metadata]
name = flask-requests-logging
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
keywords = flask, logging, web
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = Log all your Flask requests with severity depending on the result code
url = https://github.com/smok-serwis/flask-requests-logging
project-urls =
    Code = https://github.com/smok-serwis/flask-requests-logging
    Issue tracker = https://github.com/smok-serwis/flask-requests-logging/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[options]
install_requires =
    flask==3.*
    satella>=2.26.6
zip_safe = True
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
packages = find:

[options.packages.find]
exclude =
    tests

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100
